--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -2,8 +2,8 @@ header {
     width: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
-    &img {
+    margin: 1.5rem 0 0.5rem 0;
+    img {
         width: 10rem;
     }
 }
