Ajout restaurants et footer

--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -1,3 +1,13 @@
+
+@font-face {
+    font-family: 'robotoblack';
+    src: url('/sass/font/roboto-black.woff2') format('woff2'),
+         url('/sass/font/roboto-black.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-    font-family: sans-serif;
+    font-family: 'robotoblack', sans-serif;
+    margin: 0;
 }
