--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,3 +1,5 @@
 $background:#aba9a936;
 $grisfoncé: #333232db;
-$grisclair: #aba9a90f;
+$grisclair: #80797912;
+$ombres: rgba(0,0,0,.25);
+$violet: #9356DC
