--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import "./pages/about";
 @import "./pages/project";
 
+
 .localisation {
     background-color: $background;
     display: flex;
@@ -45,4 +46,148 @@
         font-size: 1.2em;
 
     }
+    a {
+        border-radius: 25px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        color: white;
+        margin-bottom: 3rem;
+        text-decoration: none;
+        background: linear-gradient(#FF79DA, #9356DC);
+        width: 13rem;
+        justify-content: center;
+        box-shadow: .25rem .25rem 10px $ombres;
+    }
 }
+
+.section-menu {
+    h1 {
+        margin: 2rem 0 1rem 1rem;
+    }
+    div {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        font-weight: bold;
+        div {
+            border-radius: 22px;
+            background-color: $grisclair;
+            width: 24rem;
+            height: 4rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 2rem;
+            box-shadow: .25rem .25rem 10px $ombres;
+            position: relative;
+
+            .fas.fa-mobile-alt,.fas.fa-list-ul,.fas.fa-store {
+                margin-right: 1rem;
+                color: $grisfoncé;
+                &:hover {
+                    color: $violet;
+                }
+            }
+
+            div {
+                width: 1.3rem;
+                height: 1.3rem;
+                position: absolute;
+                left: -0.5rem;
+                top: 1.5rem;
+                color: white;
+                background-color: $violet;
+                font-size: small;
+            }
+        }
+        }
+
+
+    }
+ .section-restaurants {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    background-color: $grisclair;
+    align-items: center;
+    padding: 1.5rem;
+    #section-restaurants__titre {
+        margin-left: 1rem;
+        display: flex;
+        justify-content: flex-start;
+        width: 100%;
+    }
+    div {
+        width: 100%;
+        overflow-x: auto;
+        img {
+            width: 100%;
+            height: 12rem;
+            border-radius: 17px 17px 0 0;
+        }
+        article {
+            background-color: white;
+            margin-bottom: 1rem;
+            box-shadow: .25rem .25rem 10px $ombres;
+            border-radius: 17px 17px 17px 17px;
+            
+            a {
+                color: black;
+                text-decoration: none;
+                background-color: white;
+                div {
+                    height: 5rem;
+                    position: relative;
+                    h2 {
+                        margin: 1rem 0 0.3rem 1rem;
+                        font-size: 1.3em;
+                        background-color: white ;
+                    }
+                    p {
+                        margin: 0 0 0 1rem;
+                    }
+                    .section-restaurants__coeur {
+                        height: 2rem;
+                        width: 2rem;
+                        font-size: 1.5rem;
+                        position: absolute;
+                        right: 1.5rem;
+                        top: 1rem;
+                    }
+                }
+            }
+        }
+    }     
+}
+
+footer {
+    background-color: $grisfoncé;
+    padding: 1rem 0 1rem 0;
+    h1 {
+        color: white;
+        margin-left: 2.4rem;
+        font-size: larger;
+    }
+    ul {
+        list-style-type: none;
+        li {
+            margin-bottom: 0.4rem;
+        }
+        
+            a {
+                color: white;
+                text-decoration: none;
+                &:hover {
+                    text-decoration: underline;
+                }
+                .fa, .fas {
+                    font-size: x-small;
+                    width: 1.5rem;
+                }
+            }
+        
+    }
+}
+
