--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: "robotoblack";
+  src: url("/sass/font/roboto-black.woff2") format("woff2"), url("/sass/font/roboto-black.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
-  font-family: sans-serif;
+  font-family: "robotoblack", sans-serif;
+  margin: 0;
 }
 
 header {
@@ -30,7 +37,7 @@ header img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #aba9a90f;
+  background-color: #80797912;
 }
 .section-explorer h1 {
   margin: 3rem 3rem 1.5rem 3rem;
@@ -38,6 +45,141 @@ header img {
 .section-explorer p {
   margin: 0 2rem 2rem 2rem;
   font-size: 1.2em;
+}
+.section-explorer a {
+  border-radius: 25px;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  color: white;
+  margin-bottom: 3rem;
+  text-decoration: none;
+  background: linear-gradient(#FF79DA, #9356DC);
+  width: 13rem;
+  justify-content: center;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+
+.section-menu h1 {
+  margin: 2rem 0 1rem 1rem;
+}
+.section-menu div {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-weight: bold;
+}
+.section-menu div div {
+  border-radius: 22px;
+  background-color: #80797912;
+  width: 24rem;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.section-menu div div .fas.fa-mobile-alt, .section-menu div div .fas.fa-list-ul, .section-menu div div .fas.fa-store {
+  margin-right: 1rem;
+  color: #333232db;
+}
+.section-menu div div .fas.fa-mobile-alt:hover, .section-menu div div .fas.fa-list-ul:hover, .section-menu div div .fas.fa-store:hover {
+  color: #9356DC;
+}
+.section-menu div div div {
+  width: 1.3rem;
+  height: 1.3rem;
+  position: absolute;
+  left: -0.5rem;
+  top: 1.5rem;
+  color: white;
+  background-color: #9356DC;
+  font-size: small;
+}
+
+.section-restaurants {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  background-color: #80797912;
+  align-items: center;
+  padding: 1.5rem;
+}
+.section-restaurants #section-restaurants__titre {
+  margin-left: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.section-restaurants div {
+  width: 100%;
+  overflow-x: auto;
+}
+.section-restaurants div img {
+  width: 100%;
+  height: 12rem;
+  border-radius: 17px 17px 0 0;
+}
+.section-restaurants div article {
+  background-color: white;
+  margin-bottom: 1rem;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  border-radius: 17px 17px 17px 17px;
+}
+.section-restaurants div article a {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+}
+.section-restaurants div article a div {
+  height: 5rem;
+  position: relative;
+}
+.section-restaurants div article a div h2 {
+  margin: 1rem 0 0.3rem 1rem;
+  font-size: 1.3em;
+  background-color: white;
+}
+.section-restaurants div article a div p {
+  margin: 0 0 0 1rem;
+}
+.section-restaurants div article a div .section-restaurants__coeur {
+  height: 2rem;
+  width: 2rem;
+  font-size: 1.5rem;
+  position: absolute;
+  right: 1.5rem;
+  top: 1rem;
+}
+
+footer {
+  background-color: #333232db;
+  padding: 1rem 0 1rem 0;
+}
+footer h1 {
+  color: white;
+  margin-left: 2.4rem;
+  font-size: larger;
+}
+footer ul {
+  list-style-type: none;
+}
+footer ul li {
+  margin-bottom: 0.4rem;
+}
+footer ul a {
+  color: white;
+  text-decoration: none;
+}
+footer ul a:hover {
+  text-decoration: underline;
+}
+footer ul a .fa, footer ul a .fas {
+  font-size: x-small;
+  width: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
