Ajout effets survol

--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -3,7 +3,9 @@ header {
     display: flex;
     justify-content: center;
     margin: 1.5rem 0 0.5rem 0;
-    img {
+    h1 {
         width: 10rem;
+        font-family: 'shrikhandregular';
+        margin: 0;
     }
 }
