--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -1,13 +1,22 @@
-
 @font-face {
-    font-family: 'robotoblack';
-    src: url('/sass/font/roboto-black.woff2') format('woff2'),
-         url('/sass/font/roboto-black.woff') format('woff');
+    font-family: 'shrikhandregular';
+    src: url('sass/font/shrikhand-regular-webfont.woff2') format('woff2'),
+         url('sass/font/shrikhand-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('sass/font/roboto-light.woff2') format('woff2'),
+         url('sass/font/roboto-light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 body {
-    font-family: 'robotoblack', sans-serif;
+    font-family: 'roboto', sans-serif;
     margin: 0;
 }
