--- a/public/sass/Layout/_header.scss
+++ b/public/sass/Layout/_header.scss
@@ -7,5 +7,9 @@ header {
         width: 10rem;
         font-family: 'shrikhandregular';
         margin: 0;
+        a {
+            text-decoration: none;
+            color: black;
+        }
     }
 }
