--- a/public/sass/Base/_base.scss
+++ b/public/sass/Base/_base.scss
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'shrikhandregular';
-    src: url('./public/font/shrikland-regular-webfont.woff2') format('woff2'),
-         url('./public/font/shrikhand-regular-webfont.woff') format('woff');
+    src: url('/public/font/shrikhand-regular-webfont.woff2') format('woff2'),
+         url('/public/font/shrikhand-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'Roboto';
-    src: url('./public/font/roboto-light.woff2') format('woff2'),
-         url('./public/font/roboto-light.woff') format('woff');
+    font-family: 'roboto';
+    src: url('/public/font/roboto-light.woff2') format('woff2'),
+         url('/public/font/roboto-light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
