Ajout des liens

--- a/public/sass/Layout/_header.scss
+++ b/public/sass/Layout/_header.scss
@@ -8,6 +8,8 @@ header {
         position: absolute;
         top: 0.5rem;
         left: 2rem;
+        cursor: pointer;
+        color: black;
     }
     h1 {
         width: 10rem;
