--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -26,6 +26,8 @@ header .fa-arrow-left {
   position: absolute;
   top: 0.5rem;
   left: 2rem;
+  cursor: pointer;
+  color: black;
 }
 header h1 {
   width: 10rem;
@@ -65,6 +67,12 @@ footer ul a .fa, footer ul a .fas {
   width: 1.5rem;
 }
 
+.image img {
+  width: 100%;
+  height: 16rem;
+  object-fit: cover;
+}
+
 .nom-restaurant {
   position: relative;
 }
@@ -82,15 +90,17 @@ footer ul a .fa, footer ul a .fas {
   font-size: large;
 }
 
-.section-menu_ {
+#section-menu_ {
   padding: 1rem;
   background-color: #80797912;
+  margin-top: -2rem;
+  border-radius: 2.5rem 2.5rem 0 0;
 }
-.section-menu_ .section-menu__type {
+#section-menu_ .section-menu__type {
   font-weight: initial;
   font-size: large;
 }
-.section-menu_ article {
+#section-menu_ article {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -101,18 +111,33 @@ footer ul a .fa, footer ul a .fas {
   margin-bottom: 1rem;
   box-shadow: 3px 3px 9px #aba9a936;
 }
-.section-menu_ article h2 {
+#section-menu_ article h2 {
   margin: 0.5rem 0 0.5rem 0;
   font-size: large;
 }
-.section-menu_ article p {
+#section-menu_ article p {
   margin: 0;
 }
-.section-menu_ article span {
+#section-menu_ article span {
   position: absolute;
   top: 2.8rem;
   right: 1rem;
   font-weight: bold;
+}
+#section-menu_ .bouton-commander {
+  display: flex;
+  justify-content: center;
+}
+#section-menu_ .bouton-commander a {
+  color: white;
+  border: solid transparent 1px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  text-decoration: none;
+  padding: 1rem 2rem 1rem 2rem;
+  border-radius: 3rem;
+  font-weight: bold;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 .localisation {
