--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -11,12 +11,12 @@
     h1 {
         font-family: 'shrikhandregular', sans-serif;
     }
-    .coeur1 {
+    /*.coeur1 {
         position: absolute;
         top: 0.5rem;
         right: 2rem;
         font-size: x-large;
-    }
+    }*/
     h2 {
         font-weight: initial;
         font-size: large;
