--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -2,6 +2,7 @@
 @import "Utils/_functions.scss";
 @import "Utils/_mixins.scss";
 @import "Utils/_extensions.scss";
+@import "Utils/animations.scss";
 
 @import "Base/_base.scss";
 @import "Base/_typography.scss";
