--- a/public/sass/Pages/_page1.scss
+++ b/public/sass/Pages/_page1.scss
@@ -158,7 +158,7 @@
                     border-radius: 4px;
                 }
                 
-                div {
+                .section-restaurants__article {
                     height: 5rem;
                     position: relative;
                     @include tablette-desktop {
